--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</head>
+
+<body>
 <canvas id="canvas"></canvas>
 
 <p>
@@ -8,3 +18,8 @@
 </p>
 <br>
 <a target="_blank" href="https://github.com/dissimulate/Clarity">View on GitHub</a>
+</body>
+
+<script src="java.js">
+</script>
+</html>
